Fixed community and about links

--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -289,11 +289,11 @@ block content
 					strong
 						p.fiesta(style="color:black") Join the conversation. Know more about the country’s agriculture and aquaculture natural resources.
 				.col-md-12.no-padding
-					img.img-responsive(src='http://www.pcaarrd.dost.gov.ph/home/portal/images/banners/commodities-1.jpg')
+					img.img-responsive(src='/images/commodities.jpg')
 
 					center(style="margin-top:1em")
-						a(href="https://docs.google.com/forms/d/15q4z6gcBt51RZpKc_9MWFsKHlXq8PAMoCMKDXKI5tdw/edit" target="_blank")
-							button(class="btn btn-lg btn-warning") Join us by filling up this form!
+						a(href="/community" target="_blank")
+							button(class="btn btn-lg btn-primary") Join us in the community!
 
 	#community_block
 		.container
@@ -310,8 +310,9 @@ block content
 								.col-md-6.col-sm-12.description
 									p
 										| DPITC is where DOST-PCAARRD presents, promotes and, commercializes its Science and Technology products to the public. DPITC embodies DOST-PCAARRD’s vision for a world-class ‘one-stop service facility’ where the department and council’s network of allied agencies converge and offers major information-communication services, technology transfer, commercialization services and training-capacity building.
-										a(target='_blank', href='#' class="pull-right btn btn-warning")
-											span.button Find out more
+									
+									a(target='_blank', href='#' class="pull-right btn btn-primary")
+										span.button Find out more
 							//- .col-xs-12.subscribe-container
 							//- 	.subscribe
 							//- 		h2
