--- a/templates/views/eresources/publication.jade
+++ b/templates/views/eresources/publication.jade
@@ -10,7 +10,13 @@ block content
             img(src=publication._.cover.fit(200, 360, {}))
             br
             br
-            //- a.btn.btn-success(href=publication.file.url,role="button",download) Download
+            if user
+              a.btn.btn-success(href=publication.file.url,role="button",download) Download
+            else
+              if redirect
+                a.btn.btn-default(href='/keystone/signin?from=' + redirect) Log In to Access
+              else
+                a.btn.btn-default(href='/keystone/signin') Log In to Access
           .col-md-9
             h2
               | #{publication.title}
