--- a/templates/views/eresources/publications.jade
+++ b/templates/views/eresources/publications.jade
@@ -2,9 +2,13 @@ extends ../../layouts/community
 
 block content
 
-  .community-body
+  //- .community-body
     #eresources-content
       .container
+
+  #public-content
+    .container-fluid(style="padding: 80px 90.5px 0px 90.5px;")
+      .wrapper
         .row
           h2#publications-head
             | S&T to People
@@ -70,10 +74,10 @@ block content
                       //   -category = 'commodity'
                       //- a(href='/eresources/publications?view=grid&'+category+'=#{'+category+'.key}')
                       //- a(href='/eresources/publications?view=grid&'+category+'=#{data.categoryResult}')
-                      a(href='/eresources/publications?view=grid')
+                      a(href='/eresources?view=grid')
                         span(aria-hidden="true").glyphicon.glyphicon-th
                     li
-                      a(href="/eresources/publications?view=list")
+                      a(href="/eresources?view=list")
                         span(aria-hidden="true").glyphicon.glyphicon-th-list
 
 
@@ -108,12 +112,18 @@ block content
                           span(aria-hidden='true') »
                     else
                       li
-                        a(href='/eresources?page=' + data.publications.next, aria-label='Next')
+                        a(href='/eresources' + query + '&page=' + data.publications.next, aria-label='Next')
                           span(aria-hidden='true') »
             //- END PAGINATION
 
-
           .col-md-3
+            ul.list-group
+              li.list-group-item.disabled(style="cursor: default;") Publication Lines
+              a(href='/eresources'): li.list-group-item All Publications
+              each line in publicationLines
+                a(href='/eresources' + '?pubLine=' + line._id): li.list-group-item #{line.name}
+
+          //- .col-md-3
             //- .list-group
             //-   li.list-group-item.list-group-item-header Industries
             //-   each industry in industries
