--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -61,7 +61,7 @@ html
 							span.icon-bar
 							span.icon-bar
 						a.navbar-brand(href='/')
-							img(src= "/images/dost-pcaarrd-white-logo.png" height="85px" width="470px")
+							img(src=logo.logoImage.secure_url, height="85px" width="470px")
 					.collapse.navbar-collapse
 						ul.nav.navbar-nav.navbar-right.links
 							each link in navLinks
