--- a/templates/views/eresources/publications.jade
+++ b/templates/views/eresources/publications.jade
@@ -16,7 +16,7 @@ block content
             p Through this Online Publication Database, PCAARRD offers you its wide array of publications, a testament to its effort and contribution to national development particularly in the agriculture, forestry, and natural resources sectors.
             br
           .col-md-12
-            nav.navbar.navbar-default
+            //- nav.navbar.navbar-default
               .container-fluid
                 //- Mobile menu
                 .navbar-header
@@ -29,35 +29,7 @@ block content
 
                 #publications-filter.collapse.navbar-collapse
                   ul.nav.navbar-nav
-
-                    //- li
-                      a(href='#') Link
-                    //- li.dropdown
-                      a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-haspopup='true', aria-expanded='false')
-                        | All
-                        span.caret
-                      ul.dropdown-menu
-                        li
-                          a(href='#') Title
-                        li
-                          a(href='#') Another action
-                        li
-                          a(href='#') Something else here
-                        li.divider(role='separator')
-                        li
-                          a(href='#') Separated link
-                        li.divider(role='separator')
-                        li
-                          a(href='#') One more separated link
-
                   form.navbar-form.navbar-left
-                    //- button(type="button", data-toggle="dropdown", aria-haspopup="true", aria-expanded="false").btn.btn-default.dropdown-toggle Industry&nbsp;
-                      span.caret
-                    ul.dropdown-menu
-                      li
-                        a(href="#") Agriculture
-                        a(href="#") Aquatic Resources
-                        a(href="#") Cakes
                     .input-group
                       input(type="text",placeholder="Search...").form-control
                       span.input-group-btn
@@ -65,19 +37,10 @@ block content
 
                   ul.nav.navbar-nav.navbar-right
                     li
-                      // -var category
-                      // if data.category == 'Industry'
-                      //   -category = 'industry'
-                      // else if data.category == 'Sector'
-                      //   -category = 'sector'
-                      // else if data.category == 'Commodity'
-                      //   -category = 'commodity'
-                      //- a(href='/eresources/publications?view=grid&'+category+'=#{'+category+'.key}')
-                      //- a(href='/eresources/publications?view=grid&'+category+'=#{data.categoryResult}')
                       a(href='/eresources?view=grid')
                         span(aria-hidden="true").glyphicon.glyphicon-th
                     li
-                      a(href="/eresources?view=list")
+                      a(href=endpoint + query + '?view=list')
                         span(aria-hidden="true").glyphicon.glyphicon-th-list
 
 
@@ -97,14 +60,15 @@ block content
                           span(aria-hidden='true') «
                     else
                       li
-                        a(href='/eresources?page=' + data.publications.previous, aria-label='Previous')
+                        a(href= endpoint + query + '?page=' + data.publications.previous, aria-label='Previous')
                           span(aria-hidden='true') «
 
-                    each page in data.publications.pages
-                      if page == data.publications.currentPage
-                        li.active: a(href='/eresources?page=' + page, style="pointer-events: none;") #{page}
-                      else
-                        li: a(href='/eresources?page=' + page) #{page}
+                    if data.publications
+                      each page in data.publications.pages
+                        if page == data.publications.currentPage
+                          li.active: a(href= endpoint + '?page=' + page, style="pointer-events: none;") #{page}
+                        else
+                          li: a(href= endpoint + query + '?page=' + page) #{page}
 
                     if data.publications.currentPage == data.publications.totalPages
                       li.disabled
@@ -112,16 +76,16 @@ block content
                           span(aria-hidden='true') »
                     else
                       li
-                        a(href='/eresources' + query + '&page=' + data.publications.next, aria-label='Next')
+                        a(href= endpoint + query + '&page=' + data.publications.next, aria-label='Next')
                           span(aria-hidden='true') »
             //- END PAGINATION
 
           .col-md-3
             ul.list-group
               li.list-group-item.disabled(style="cursor: default;") Publication Lines
-              a(href='/eresources'): li.list-group-item All Publications
+              a(href=endpoint): li.list-group-item All Publications
               each line in publicationLines
-                a(href='/eresources' + '?pubLine=' + line._id): li.list-group-item #{line.name}
+                a(href= endpoint + '?pubLine=' + line._id): li.list-group-item #{line.name}
 
           //- .col-md-3
             //- .list-group
