Applied dynamic fetching of technologies from the database

--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -166,114 +166,121 @@ block content
 						!= settings.technologyDescription
 		.container.no-padding
 			.row
-				.col-md-2.col-sm-6.col-xs-12.tech-item
-					a.fh5co-project-item(href='http://www.pcaarrd.dost.gov.ph/home/portal/index.php/quick-information-dispatch/2583-new-fusarium-wilt-resistant-cavendish-passed-export-market-standards', style='background-image: url(/images/exhibit/cavendish.jpg);', target='_blank')
-						img.img-responsive.sr-only(src='/images/exhibit/cavendish.jpg', alt='Image')
-						.tech-icon
-							img(src='/images/exhibit/agri.png')
-						.fh5co-overlay
-						.fh5co-text
-							.tech-category AGRICULTURE
-							h3 Cavendish resistant to Fusarium Wilt
-				.col-md-2.col-sm-6.col-xs-12.tech-item
-					a.fh5co-project-item(href='http://www.pcaarrd.dost.gov.ph/home/portal/index.php/quick-information-dispatch/2659-biofloc-technology-to-reduce-risk-of-diseases-and-enhance-nutrition-in-shrimp-farms', style='background-image: url(/images/exhibit/shrimp.jpg);', target='_blank')
-						img.img-responsive.sr-only(src='/images/exhibit/shrimp.jpg', alt='Image')
-						.tech-icon
-							img(src='/images/exhibit/aqua.png')
-						.fh5co-overlay
-						.fh5co-text
-							.tech-category AQUATIC RESOURCE
-							h3 Shrimp biofloc technology
-				.col-md-2.col-sm-6.col-xs-12.tech-item
-					a.fh5co-project-item(href='http://www.pcaarrd.dost.gov.ph/home/portal/index.php/quick-information-dispatch/2673-carrageenan-boosts-rice-production', style='background-image: url(/images/exhibit/cpgr.jpg);', target='_blank')
-						img.img-responsive.sr-only(src='/images/exhibit/cpgr.jpg', alt='Image')
-						.tech-icon
-							img(src='/images/exhibit/aqua.png')
-						.fh5co-overlay
-						.fh5co-text
-							.tech-category AQUATIC RESOURCE
-							h3 Carrageenan Plant Growth Regulator (CPGR)
-				.col-md-2.col-sm-6.col-xs-12.tech-item
-					a.fh5co-project-item(href='http://www.pcaarrd.dost.gov.ph/home/portal/index.php/quick-information-dispatch/2581-somatic-embryogenesis-a-promising-technology-to-mass-propagate-coconut', style='background-image: url(/images/exhibit/coco.jpg);', target='_blank')
-						img.img-responsive.sr-only(src='/images/exhibit/coco.jpg', alt='Image')
-						.tech-icon
-							img(src='/images/exhibit/agri.png')
-						.fh5co-overlay
-						.fh5co-text
-							.tech-category AGRICULTURE
-							h3 Coconut Somatic Embryogenesis
-				.col-md-2.col-sm-6.col-xs-12.tech-item
-					a.fh5co-project-item(href='http://www.pcaarrd.dost.gov.ph/home/portal/index.php/quick-information-dispatch/2664-restoring-the-country-s-coral-reefs-through-filipinnovation', style='background-image: url(/images/exhibit/coral.jpg);', target='_blank')
-						img.img-responsive.sr-only(src='/images/exhibit/coral.jpg', alt='Image')
-						.tech-icon
-							img(src='/images/exhibit/aqua.png')
-						.fh5co-overlay
-						.fh5co-text
-							.tech-category AGRICULTURE
-							h3 Corals asexual reproduction
-				.col-md-2.col-sm-6.col-xs-12.tech-item
-					a.fh5co-project-item(href='http://www.pcaarrd.dost.gov.ph/home/portal/index.php/quick-information-dispatch/2666-sarai-smarter-moves-for-a-competitive-agriculture', style='background-color:yellow;padding-top:50%;', target='_blank')
-						h2(style='color: darkgreen;font-weight: bold;') Smarter Agriculture
-						.tech-icon
-							img(src='/images/exhibit/nr.png')
-						.fh5co-overlay
-						.fh5co-text
-							.tech-category NATURAL RESOURCE
-							h4 | Smarter Approaches to Reinvigorate Agriculture as an Industry in the Philippines (SARAI)
-				.col-md-2.col-sm-6.col-xs-12.tech-item
-					a.fh5co-project-item(href='http://www.pcaarrd.dost.gov.ph/home/portal/index.php/quick-information-dispatch/2676-swine-genomics-to-help-improve-the-industry-s-productivity', style='background-image: url(/images/exhibit/pigs.jpg);', target='_blank')
-						img.img-responsive.sr-only(src='/images/exhibit/pigs.jpg', alt='Image')
-						.tech-icon
-							img(src='/images/exhibit/agri.png')
-						.fh5co-overlay
-						.fh5co-text
-							.tech-category AGRICULTURE
-							h3 Swine genomics
-				.col-md-2.col-sm-6.col-xs-12.tech-item
-					a.fh5co-project-item(href='#', style='background-image: url(/images/exhibit/abaca.jpg);', target='_blank')
-						img.img-responsive.sr-only(src='/images/exhibit/abaca.jpg', alt='Image')
-						.tech-icon
-							img(src='/images/exhibit/agri.png')
-						.fh5co-overlay
-						.fh5co-text
-							.tech-category AGRICULTURE
-							h3 Adding higher value to abaca
-				.col-md-2.col-sm-6.col-xs-12.tech-item
-					a.fh5co-project-item(href='#', style='background-image: url(/images/exhibit/bamboo.jpg);', target='_blank')
-						img.img-responsive.sr-only(src='/images/exhibit/bamboo.jpg', alt='Image')
-						.tech-icon
-							img(src='/images/exhibit/nr.png')
-						.fh5co-overlay
-						.fh5co-text
-							.tech-category NATURAL RESOURCE
-							h3 Bamboo: rgb(18, 81, 4) gold from the forests
-				.col-md-2.col-sm-6.col-xs-12.tech-item
-					a.fh5co-project-item(href='#', style='background-image: url(/images/exhibit/tilapia.jpg);', target='_blank')
-						img.img-responsive.sr-only(src='/images/exhibit/tilapia.jpg', alt='Image')
-						.tech-icon
-							img(src='/images/exhibit/aqua.png')
-						.fh5co-overlay
-						.fh5co-text
-							.tech-category AQUATIC RESOURCE
-							h3 Tilapia farming technologies
-				.col-md-2.col-sm-6.col-xs-12.tech-item
-					a.fh5co-project-item(href='#', style='background-image: url(/images/exhibit/coffee.jpg);', target='_blank')
-						img.img-responsive.sr-only(src='/images/exhibit/coffee.jpg', alt='Image')
-						.tech-icon
-							img(src='/images/exhibit/agri.png')
-						.fh5co-overlay
-						.fh5co-text
-							.tech-category AGRICULTURE
-							h3 Quality planting materials for a better coffee
-				.col-md-2.col-sm-6.col-xs-12.tech-item
-					a.fh5co-project-item(href='#', style='background-image: url(/images/exhibit/peanuts.jpg);', target='_blank')
-						img.img-responsive.sr-only(src='/images/exhibit/peanuts.jpg', alt='Image')
-						.tech-icon
-							img(src='/images/exhibit/agri.png')
-						.fh5co-overlay
-						.fh5co-text
-							.tech-category AGRICULTURE
-							h3 Enhancing peanut productivity
+				each technology in technologies
+					.col-md-2.col-sm-6.col-xs-12.tech-item
+						a.fh5co-project-item(href=technology.link, style='background-image: url('+technology.image.secure_url+');', target='_blank')
+							//- img.img-responsive.sr-only(src=technology.image.secure_url)
+							.tech-icon
+								if technology.category == "agriculture"
+									img(src='/images/exhibit/agri.png')
+								else if technology.category == "aquatic resource"
+									img(src='/images/exhibit/aqua.png')
+								else if technology.category == "natural resource"
+									img(src='/images/exhibit/nr.png')
+							.fh5co-overlay
+							.fh5co-text
+								.tech-category.text-uppercase #{technology.category}
+								h3 #{technology.title}
+				
+				//- .col-md-2.col-sm-6.col-xs-12.tech-item
+				//- 	a.fh5co-project-item(href='http://www.pcaarrd.dost.gov.ph/home/portal/index.php/quick-information-dispatch/2659-biofloc-technology-to-reduce-risk-of-diseases-and-enhance-nutrition-in-shrimp-farms', style='background-image: url(/images/exhibit/shrimp.jpg);', target='_blank')
+				//- 		img.img-responsive.sr-only(src='/images/exhibit/shrimp.jpg', alt='Image')
+				//- 		.tech-icon
+				//- 			img(src='/images/exhibit/aqua.png')
+				//- 		.fh5co-overlay
+				//- 		.fh5co-text
+				//- 			.tech-category AQUATIC RESOURCE
+				//- 			h3 Shrimp biofloc technology
+				//- .col-md-2.col-sm-6.col-xs-12.tech-item
+				//- 	a.fh5co-project-item(href='http://www.pcaarrd.dost.gov.ph/home/portal/index.php/quick-information-dispatch/2673-carrageenan-boosts-rice-production', style='background-image: url(/images/exhibit/cpgr.jpg);', target='_blank')
+				//- 		img.img-responsive.sr-only(src='/images/exhibit/cpgr.jpg', alt='Image')
+				//- 		.tech-icon
+				//- 			img(src='/images/exhibit/aqua.png')
+				//- 		.fh5co-overlay
+				//- 		.fh5co-text
+				//- 			.tech-category AQUATIC RESOURCE
+				//- 			h3 Carrageenan Plant Growth Regulator (CPGR)
+				//- .col-md-2.col-sm-6.col-xs-12.tech-item
+				//- 	a.fh5co-project-item(href='http://www.pcaarrd.dost.gov.ph/home/portal/index.php/quick-information-dispatch/2581-somatic-embryogenesis-a-promising-technology-to-mass-propagate-coconut', style='background-image: url(/images/exhibit/coco.jpg);', target='_blank')
+				//- 		img.img-responsive.sr-only(src='/images/exhibit/coco.jpg', alt='Image')
+				//- 		.tech-icon
+				//- 			img(src='/images/exhibit/agri.png')
+				//- 		.fh5co-overlay
+				//- 		.fh5co-text
+				//- 			.tech-category AGRICULTURE
+				//- 			h3 Coconut Somatic Embryogenesis
+				//- .col-md-2.col-sm-6.col-xs-12.tech-item
+				//- 	a.fh5co-project-item(href='http://www.pcaarrd.dost.gov.ph/home/portal/index.php/quick-information-dispatch/2664-restoring-the-country-s-coral-reefs-through-filipinnovation', style='background-image: url(/images/exhibit/coral.jpg);', target='_blank')
+				//- 		img.img-responsive.sr-only(src='/images/exhibit/coral.jpg', alt='Image')
+				//- 		.tech-icon
+				//- 			img(src='/images/exhibit/aqua.png')
+				//- 		.fh5co-overlay
+				//- 		.fh5co-text
+				//- 			.tech-category AGRICULTURE
+				//- 			h3 Corals asexual reproduction
+				//- .col-md-2.col-sm-6.col-xs-12.tech-item
+				//- 	a.fh5co-project-item(href='http://www.pcaarrd.dost.gov.ph/home/portal/index.php/quick-information-dispatch/2666-sarai-smarter-moves-for-a-competitive-agriculture', style='background-color:yellow;padding-top:50%;', target='_blank')
+				//- 		h2(style='color: darkgreen;font-weight: bold;') Smarter Agriculture
+				//- 		.tech-icon
+				//- 			img(src='/images/exhibit/nr.png')
+				//- 		.fh5co-overlay
+				//- 		.fh5co-text
+				//- 			.tech-category NATURAL RESOURCE
+				//- 			h4 | Smarter Approaches to Reinvigorate Agriculture as an Industry in the Philippines (SARAI)
+				//- .col-md-2.col-sm-6.col-xs-12.tech-item
+				//- 	a.fh5co-project-item(href='http://www.pcaarrd.dost.gov.ph/home/portal/index.php/quick-information-dispatch/2676-swine-genomics-to-help-improve-the-industry-s-productivity', style='background-image: url(/images/exhibit/pigs.jpg);', target='_blank')
+				//- 		img.img-responsive.sr-only(src='/images/exhibit/pigs.jpg', alt='Image')
+				//- 		.tech-icon
+				//- 			img(src='/images/exhibit/agri.png')
+				//- 		.fh5co-overlay
+				//- 		.fh5co-text
+				//- 			.tech-category AGRICULTURE
+				//- 			h3 Swine genomics
+				//- .col-md-2.col-sm-6.col-xs-12.tech-item
+				//- 	a.fh5co-project-item(href='#', style='background-image: url(/images/exhibit/abaca.jpg);', target='_blank')
+				//- 		img.img-responsive.sr-only(src='/images/exhibit/abaca.jpg', alt='Image')
+				//- 		.tech-icon
+				//- 			img(src='/images/exhibit/agri.png')
+				//- 		.fh5co-overlay
+				//- 		.fh5co-text
+				//- 			.tech-category AGRICULTURE
+				//- 			h3 Adding higher value to abaca
+				//- .col-md-2.col-sm-6.col-xs-12.tech-item
+				//- 	a.fh5co-project-item(href='#', style='background-image: url(/images/exhibit/bamboo.jpg);', target='_blank')
+				//- 		img.img-responsive.sr-only(src='/images/exhibit/bamboo.jpg', alt='Image')
+				//- 		.tech-icon
+				//- 			img(src='/images/exhibit/nr.png')
+				//- 		.fh5co-overlay
+				//- 		.fh5co-text
+				//- 			.tech-category NATURAL RESOURCE
+				//- 			h3 Bamboo: rgb(18, 81, 4) gold from the forests
+				//- .col-md-2.col-sm-6.col-xs-12.tech-item
+				//- 	a.fh5co-project-item(href='#', style='background-image: url(/images/exhibit/tilapia.jpg);', target='_blank')
+				//- 		img.img-responsive.sr-only(src='/images/exhibit/tilapia.jpg', alt='Image')
+				//- 		.tech-icon
+				//- 			img(src='/images/exhibit/aqua.png')
+				//- 		.fh5co-overlay
+				//- 		.fh5co-text
+				//- 			.tech-category AQUATIC RESOURCE
+				//- 			h3 Tilapia farming technologies
+				//- .col-md-2.col-sm-6.col-xs-12.tech-item
+				//- 	a.fh5co-project-item(href='#', style='background-image: url(/images/exhibit/coffee.jpg);', target='_blank')
+				//- 		img.img-responsive.sr-only(src='/images/exhibit/coffee.jpg', alt='Image')
+				//- 		.tech-icon
+				//- 			img(src='/images/exhibit/agri.png')
+				//- 		.fh5co-overlay
+				//- 		.fh5co-text
+				//- 			.tech-category AGRICULTURE
+				//- 			h3 Quality planting materials for a better coffee
+				//- .col-md-2.col-sm-6.col-xs-12.tech-item
+				//- 	a.fh5co-project-item(href='#', style='background-image: url(/images/exhibit/peanuts.jpg);', target='_blank')
+				//- 		img.img-responsive.sr-only(src='/images/exhibit/peanuts.jpg', alt='Image')
+				//- 		.tech-icon
+				//- 			img(src='/images/exhibit/agri.png')
+				//- 		.fh5co-overlay
+				//- 		.fh5co-text
+				//- 			.tech-category AGRICULTURE
+				//- 			h3 Enhancing peanut productivity
 
 	#block
 		.container.no-padding
