--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -126,3 +126,18 @@ block content
 									
 									a(target='_blank', href=settings.aboutLink, class="pull-right btn btn-primary")
 										span.button #{settings.aboutButtonText}
+
+// Piwik
+script(type='text/javascript').
+  var _paq = _paq || [];
+  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+  _paq.push(['trackPageView']);
+  _paq.push(['enableLinkTracking']);
+  (function() {
+  var u="//128.199.166.120/piwik/";
+  _paq.push(['setTrackerUrl', u+'piwik.php']);
+  _paq.push(['setSiteId', '2']);
+  var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+  g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+  })();
+// End Piwik Code
