--- a/templates/layouts/default.jade
+++ b/templates/layouts/default.jade
@@ -26,6 +26,22 @@ html
 		script(src='/js/d3/d3.min.js')
 		script(src='/js/d3pie/d3pie.min.js')
 
+		//- Piwik
+		script(type='text/javascript').
+			var _paq = _paq || [];
+			/* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+			_paq.push(['trackPageView']);
+			_paq.push(['enableLinkTracking']);
+			(function() {
+			var u="//128.199.166.120/piwik/";
+			console.log("PIWIK!!")
+			_paq.push(['setTrackerUrl', u+'piwik.php']);
+			_paq.push(['setSiteId', '2']);
+			var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+			g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
+			})();
+		//- End Piwik Code
+
 		//- This file provides the default styling for the KeystoneJS Content Editor
 		if user && user.canAccessKeystone
 			link(href="/keystone/styles/content/editor.min.css", rel="stylesheet")
