--- a/templates/views/eresources/publications-grid.jade
+++ b/templates/views/eresources/publications-grid.jade
@@ -3,7 +3,9 @@ extends ./publications
 block publications
   .row
     if data.publications.results
-      h4(style='text-align:center') #{pubLine.name}
+      if pubLine.name != "ALL"
+        h4(style='text-align:center') #{pubLine.name}
+      
       each publication in data.publications.results
         .col-sm-6.col-md-3(style='padding-left:0')
           .thumbnail(style='padding:10px')
